# dessia_bot_template

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  PackageTemplate_Inputs.xlsx  README.md  README.template  Template_Inputs.xlsx  ci_tests.py  coverage.py  create_package.py  pyproject.toml  quickstart.py  quickstart_call.py  quickstart_lib.py  requirements.txt  setup.py  setup_template.py  template_inputs.ini  templates.py
methods/: methods_check_inputs.py  methods_get_parameters_from_excel.py  methods_get_parameters_from_ini_file.py
package_folder/: .gitlab-ci.yml  .pre-commit-config.yaml  .pylintrc  CHANGELOG.md  README.md  coverage.py  pyproject.toml  setup.py  test.py
package_folder/.gitlab/issue_templates/: issue_template.md
package_folder/.gitlab/merge_request_templates/: merge_request_template.md
package_folder/scripts/: ci_scripts.py  script_1.py  script_2.py
package_folder/src/folder/: module_2.py
package_folder/tests/: test_exemple.py
package_foler/: .coveragerc  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  README.md  code_pydocstyle.py  code_pylint.py  coverage.py  pyproject.toml  setup.py  test.py
package_foler/folder/: __init__.py  module_1.py  module_2.py
package_foler/scripts/: ci_scripts.py  script_1.py  script_2.py
package_foler/tests/: __init__.py  test_exemple.py
