[project]
name = "dessia_bot_template"
requires-python = ">= 3.9"

[tool.ruff]
line-length = 120
target-version = "py39"
exclude = []

[tool.ruff.lint]
preview = true
select = [  # https://docs.astral.sh/ruff/rules
    "E4", "E7", "E9",  # pycodestyle
    "F",  # Pyflakes
    "B",  # flake8-bugbear
    "I",  # isort
    "N",  # pep8-naming
    "D",  # pydocstyle documentation
    "UP", # pyupgrade
    "ANN001",  # missing type annotation for function arguments
    "ANN201",  # missing type annotation for function return value
    "PL",  # pylint
    "NPY",  # NumPy-specific rules
    "PERF",  # Perflint
    "RUF",  # Ruff-specific rules
]

[tool.ruff.lint.pydocstyle]
convention = "pep257"

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["D"]  # documenting the unit tests is not necessary

[tool.codespell]
skip = ["*.json", "*.html", "*.js", "*.css", ".c", ".h", ".cpp", ".hpp", "*.xml"]
ignore-words-list = ["dessia"]  # words to ignore from codespell check
